Move ProfileSyncService tests for autofill & typed URLs to components
This includes also shared test support.

BUG=581640

Review URL: https://codereview.chromium.org/1692873004

Cr-Commit-Position: refs/heads/master@{#376474}

--- a/components/browser_sync/browser/BUILD.gn
+++ b/components/browser_sync/browser/BUILD.gn
@@ -48,7 +48,9 @@ source_set("unit_tests") {
   testonly = true
 
   sources = [
+    "profile_sync_service_autofill_unittest.cc",
     "profile_sync_service_startup_unittest.cc",
+    "profile_sync_service_typed_url_unittest.cc",
     "profile_sync_service_unittest.cc",
   ]
 
@@ -57,8 +59,11 @@ source_set("unit_tests") {
     ":test_support",
     "//base",
     "//base/test:test_support",
+    "//components/autofill/core/browser:test_support",
+    "//components/autofill/core/common:common",
     "//components/browser_sync/common",
     "//components/dom_distiller/core",
+    "//components/history/core/browser:browser",
     "//components/invalidation/impl",
     "//components/invalidation/public",
     "//components/prefs",
@@ -74,6 +79,7 @@ source_set("unit_tests") {
     "//components/syncable_prefs:test_support",
     "//components/version_info",
     "//components/version_info:generate_version_info",
+    "//components/webdata_services:test_support",
     "//google_apis",
     "//net",
     "//testing/gmock",
@@ -85,10 +91,16 @@ source_set("unit_tests") {
 source_set("test_support") {
   testonly = true
   sources = [
+    "abstract_profile_sync_service_test.cc",
+    "abstract_profile_sync_service_test.h",
     "profile_sync_service_mock.cc",
     "profile_sync_service_mock.h",
     "profile_sync_test_util.cc",
     "profile_sync_test_util.h",
+    "test_http_bridge_factory.cc",
+    "test_http_bridge_factory.h",
+    "test_profile_sync_service.cc",
+    "test_profile_sync_service.h",
   ]
 
   deps = [
@@ -107,6 +119,8 @@ source_set("test_support") {
     "//components/syncable_prefs:test_support",
     "//google_apis",
     "//net:test_support",
+    "//sync:test_support_sync_core",
+    "//sync:test_support_sync_internal_api",
     "//testing/gmock",
   ]
 }
