Move ChromeBrowserProvider and related files to separate package.
This moves all the classes related to ChromeBrowserProvider into the
org.chromium.chrome.browser.provider package, which is consistent with
the folder used for the corresponding C++ files
(chrome/browser/android/provider). Some of these files were in the
otherwise-obsolete "bookmark" package.

BUG=583477

Review URL: https://codereview.chromium.org/1707153002

Cr-Commit-Position: refs/heads/master@{#376493}

--- a/chrome/android/java/AndroidManifest.xml
+++ b/chrome/android/java/AndroidManifest.xml
@@ -419,7 +419,7 @@ by a child template that "extends" this file.
         </receiver>
 
         <!-- Providers for chrome data. -->
-        <provider android:name="org.chromium.chrome.browser.ChromeBrowserProvider"
+        <provider android:name="org.chromium.chrome.browser.provider.ChromeBrowserProvider"
             android:authorities="{{ manifest_package }}.ChromeBrowserProvider;{{ manifest_package }}.browser;{{ manifest_package }}"
             android:exported="true">
             <path-permission android:path="/bookmarks/search_suggest_query"
