Start to unwind references to iOS in //content
The iOS port no longer uses //content (hooray!). This CL starts the
unwinding of references to iOS in //content by removing most references
in gypfiles. Note that after this CL dependencies on the content_browser
or content_common target will cause a gyp_chromium failure on iOS. This "fail
fast" behavior is good since new dependencies on //content on iOS are wrong.

Review URL: https://codereview.chromium.org/1710043002

Cr-Commit-Position: refs/heads/master@{#376494}

--- a/content/browser/BUILD.gn
+++ b/content/browser/BUILD.gn
@@ -180,7 +180,7 @@ source_set("browser") {
   }
 
   # TODO(GYP)
-  #   ['OS!="ios" and chrome_multiple_dll!=1', {
+  #   [chrome_multiple_dll!=1', {
   #     'dependencies': [
   #       '../third_party/WebKit/public/blink.gyp:blink',
   #     ],
@@ -497,13 +497,6 @@ source_set("browser") {
       ]
     }
     deps += [ "//ui/compositor" ]
-  }
-
-  if (!is_ios) {
-    sources += [
-      "compositor/surface_utils.cc",
-      "compositor/surface_utils.h",
-    ]
   }
 
   if (enable_web_speech) {
