media: Refactor mojo media gn arguments.
This CL makes mojo media services highly configurable by
providing finer control on what service is enabled on which
platform. For example, on Android and Desktop, we want use the
default media Renderer but use the mojo CDM. On ChromeCast, we
want to use the mojo Renderer and the mojo CDM.

Tested with various gn argument combinations, e.g.

- mojo_media_host="utility", mojo_media_services=["cdm"]
    Both clear and encrypted playback (Clear Key) work. In the
    encrypted case, we use DecryptingDemuxerStream and
    MojoDecryptor to do decrypt-only.

- mojo_media_host="utility", mojo_media_services=["renderer"]
    Clear playback works using remote renderer. Encrypted playback
    doesn't work because a remote renderer doesn't support a local
    CDM.

- mojo_media_host="gpu", mojo_media_services=["renderer", "cdm"]
    Both clear and encrypted playback work. In both cases a remote
    renderer is used. In the encrytped case, the remote renderer
    uses a remote CDM in the GPU process.

BUG=571247
TEST=See above.
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1712033002

Cr-Commit-Position: refs/heads/master@{#376498}

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -963,10 +963,10 @@ source_set("browser") {
     deps += [ "//chrome/browser/media/router" ]
   }
 
-  if (enable_mojo_media == "browser") {
+  if (mojo_media_host == "browser") {
     deps += [ "//media/mojo/services:application_factory" ]
-  } else if (enable_mojo_media != "none") {
-    configs += [ "//media/mojo/services:enable_mojo_media_config" ]
+  } else if (enable_mojo_media) {
+    configs += [ "//media/mojo/services:mojo_media_config" ]
   }
 
   if (enable_wayland_server) {
