Port "Eclipse CDT settings" file generation from GYP to GN
Differences between GN and GYP version:
- GN version does not generate .classpath file because there is a checked in
  version at tools/android/eclipse/.classpath
- GN version does not extract includes dirs and defines from clang compiler.
  A yet to be written python script will do this.

BUG=530676

Review URL: https://codereview.chromium.org/1649783003

Cr-Commit-Position: refs/heads/master@{#376512}

--- a/tools/gn/BUILD.gn
+++ b/tools/gn/BUILD.gn
@@ -50,6 +50,8 @@ static_library("gn_lib") {
     "copy_target_generator.h",
     "deps_iterator.cc",
     "deps_iterator.h",
+    "eclipse_writer.cc",
+    "eclipse_writer.h",
     "err.cc",
     "err.h",
     "escape.cc",
