Fix test failures on blimp for Android
Disables certain tests for Android builds.  This is because our underlying test
harness isn't loading the correct JNI.  Will work on a proper fix in another
patch.

BUG=588240

Review URL: https://codereview.chromium.org/1712153003

Cr-Commit-Position: refs/heads/master@{#376538}

--- a/blimp/client/BUILD.gn
+++ b/blimp/client/BUILD.gn
@@ -47,9 +47,13 @@ source_set("blimp_client") {
 source_set("blimp_client_unit_tests") {
   testonly = true
 
-  sources = [
-    "session/assignment_source_unittest.cc",
-  ]
+  sources = []
+
+  # TODO(dtrainor): Fix the test harness to allow this to run on Android.
+  # See crbug.com/588240.
+  if (is_linux) {
+    sources += [ "session/assignment_source_unittest.cc" ]
+  }
 
   deps = [
     ":blimp_client",
