Persist setup metrics and have Chrome report them during UMA upload.
BUG=546019

Review URL: https://codereview.chromium.org/1537743006

Cr-Commit-Position: refs/heads/master@{#376549}

--- a/chrome/installer/setup/BUILD.gn
+++ b/chrome/installer/setup/BUILD.gn
@@ -41,6 +41,8 @@ if (is_win) {
       "installer_crash_reporter_client.h",
       "installer_crash_reporting.cc",
       "installer_crash_reporting.h",
+      "installer_metrics.cc",
+      "installer_metrics.h",
       "setup_constants.cc",
       "setup_constants.h",
       "setup_util.cc",
