Provide default implementations for uploading.
In this CL, I provide implementations for:

* Uploading a file
* Uploading from a cross-process file descriptor
* Uploading a byte[], a region of a byte[], and a ByteBuffer

BUG=583368
CQ-DEPEND=CL:1686793002

Review URL: https://codereview.chromium.org/1697573002

Cr-Commit-Position: refs/heads/master@{#376554}

--- a/components/cronet/android/BUILD.gn
+++ b/components/cronet/android/BUILD.gn
@@ -550,6 +550,7 @@ android_library("cronet_javatests") {
     "test/javatests/src/org/chromium/net/TestHttpUrlRequestListener.java",
     "test/javatests/src/org/chromium/net/TestUploadDataProvider.java",
     "test/javatests/src/org/chromium/net/TestUrlRequestCallback.java",
+    "test/javatests/src/org/chromium/net/UploadDataProvidersTest.java",
     "test/javatests/src/org/chromium/net/UploadTest.java",
     "test/javatests/src/org/chromium/net/UrlResponseInfoTest.java",
     "test/javatests/src/org/chromium/net/urlconnection/CronetBufferedOutputStreamTest.java",
