Reland: Move VideoCapture* files from media/base/android/... to media/capture/video/android/java/...
Reland: "Move VideoCapture* files from media/base/android/...
to media/capture/video/android/java/..."
which was reverted due to Android bots failing.

This reland adds a capture_jni_registrar file pair
that basically intitializes the JNI VideoCapture*.java
links, and adds the necessary dependency and
call site for that.

Original CL description ------------------------------------------------

** No code changes (except git cl format kicked by presbumit). **

This CL refactors the VideoCapture*java classes
from being under media/base/android/java/... into
media/capture/video/android/java/... with the idea
of bringing all such classes under a single roof
as a preparation for http://crbug.com/584797 (CL
http://crrev.com/1699553002) which creates an entity
(very similar to media/cast/ and media/midi/) with
its own .gn and .gyp.

BUG=587693, 584797

Review URL: https://codereview.chromium.org/1714913002

Cr-Commit-Position: refs/heads/master@{#376562}

--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -925,6 +925,7 @@ if (is_android) {
         "//gpu:test_support",
         "//media/base/android",
         "//media/base/android:media_java",
+        "//media/capture/video/android:capture_java",
         "//testing/gmock",
         "//ui/android:ui_java",
       ]
