--- a/content/public/android/BUILD.gn
+++ b/content/public/android/BUILD.gn
@@ -39,6 +39,7 @@ android_library("content_java") {
     "//device/vibration:mojo_bindings_java",
     "//device/vibration/android:vibration_manager_android",
     "//media/base/android:media_java",
+    "//media/capture/video/android:capture_java",
     "//media/midi:midi_java",
     "//mojo/android:system_java",
     "//mojo/public/java:bindings",
@@ -177,6 +178,7 @@ android_library("content_javatests") {
     "//device/vibration:mojo_bindings_java",
     "//device/vibration/android:vibration_manager_android",
     "//media/base/android:media_java",
+    "//media/capture/video/android:capture_java",
     "//mojo/android:system_java",
     "//mojo/public/interfaces/bindings/tests:test_interfaces_java",
     "//mojo/public/java:bindings",
