Adds back qualifier support to the shell
This also adds the ability to add command line switches to child
processes.

BUG=581539
TEST=none
R=ben@chromium.org

Review URL: https://codereview.chromium.org/1714183003

Cr-Commit-Position: refs/heads/master@{#376567}

--- a/mojo/shell/runner/host/BUILD.gn
+++ b/mojo/shell/runner/host/BUILD.gn
@@ -61,6 +61,7 @@ source_set("lib") {
     "child_process.h",
     "child_process_host.cc",
     "child_process_host.h",
+    "command_line_switch.h",
     "in_process_native_runner.cc",
     "in_process_native_runner.h",
     "out_of_process_native_runner.cc",
