--- a/content/browser/BUILD.gn
+++ b/content/browser/BUILD.gn
@@ -117,6 +117,7 @@ source_set("browser") {
     deps += [
       "//cc",
       "//cc/surfaces",
+      "//components/leveldb:lib",
       "//components/scheduler:common",
       "//content/app/resources",
       "//content/app/strings",
