Remove standalone android shell, as it has bitrotted and is unused
BUG=

Review URL: https://codereview.chromium.org/1714593002

Cr-Commit-Position: refs/heads/master@{#376623}

--- a/components/mus/ws/BUILD.gn
+++ b/components/mus/ws/BUILD.gn
@@ -119,8 +119,11 @@ group("tests") {
   deps = [
     ":apptests",
     ":window_manager_unittests",
-    "//components/mus/public/cpp/tests:mojo_view_manager_lib_unittests",
   ]
+  if (!is_android) {
+    deps +=
+        [ "//components/mus/public/cpp/tests:mojo_view_manager_lib_unittests" ]
+  }
 }
 
 test("window_manager_unittests") {
