Add missing dep.
TBR=sky@chromium.org
NOPRESUBMIT=true
NOTREECHECKS=true
NOTRY=true

Review URL: https://codereview.chromium.org/1714273002

Cr-Commit-Position: refs/heads/master@{#376624}

--- a/components/filesystem/BUILD.gn
+++ b/components/filesystem/BUILD.gn
@@ -26,6 +26,7 @@ source_set("lib") {
     "//mojo/common:common_base",
     "//mojo/platform_handle",
     "//mojo/shell/public/cpp",
+    "//mojo/shell/public/interfaces",
     "//url",
   ]
 }
