--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -3,6 +3,7 @@
 # found in the LICENSE file.
 
 import("//build/config/chrome_build.gni")
+import("//build/config/compiler/compiler.gni")
 import("//build/config/crypto.gni")
 import("//build/config/features.gni")
 import("//build/config/ui.gni")
@@ -392,6 +393,10 @@ test("content_browsertests") {
         # TODO(GYP): Add this once //content/shell:copy_test_netscape_plugin
         # exists.
         #data += [ "$root_out_dir/plugins/np_test_netscape_plugin.dll" ]
+
+        if (symbol_level != 0) {
+          data += [ "$root_out_dir/content_browsertests.exe.pdb" ]
+        }
       }
     }
   }
