Eliminate URLRequest from shell mojom & client library.
Rename mojom ConnectToApplication -> Connect() to match client library.

BUG=
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1710233002

Cr-Commit-Position: refs/heads/master@{#376647}

--- a/mojo/shell/public/cpp/BUILD.gn
+++ b/mojo/shell/public/cpp/BUILD.gn
@@ -43,7 +43,6 @@ source_set("sources") {
   deps = [
     "//base:i18n",
     "//mojo/common",
-    "//mojo/converters/network",
     "//mojo/environment:chromium",
     "//mojo/message_pump",
   ]
@@ -53,6 +52,7 @@ source_set("sources") {
     "//mojo/public/cpp/bindings",
     "//mojo/public/cpp/system",
     "//mojo/shell/public/interfaces",
+    "//url",
   ]
 }
 
