--- a/mojo/shell/BUILD.gn
+++ b/mojo/shell/BUILD.gn
@@ -27,8 +27,8 @@ source_set("shell") {
     "application_manager.h",
     "capability_filter.cc",
     "capability_filter.h",
-    "connect_to_application_params.cc",
-    "connect_to_application_params.h",
+    "connect_params.cc",
+    "connect_params.h",
     "connect_util.cc",
     "connect_util.h",
     "identity.cc",
@@ -42,7 +42,6 @@ source_set("shell") {
     "//base",
     "//mojo/common",
     "//mojo/public/cpp/bindings",
-    "//mojo/services/network/public/interfaces",
     "//mojo/services/package_manager/public/interfaces",
     "//mojo/services/updater",
     "//mojo/shell/public/interfaces",
