Updating webapp to send securityKey capability.
This change updates the CRD webapp to send the securityKey capability to
the host if the appropriate gnubby extension exists (which we would use
to resolve gnubby requests).

The only interesting bit in this change is that there is no synchronous
API to check for extension existence in Chrome (that I could find) so we
need to use a promise to wait for either a disconnect message or a
response to a Hello message to determine if the extension exists.

BUG=585835

Review URL: https://codereview.chromium.org/1707163002

Cr-Commit-Position: refs/heads/master@{#376654}

--- a/remoting/webapp/files.gni
+++ b/remoting/webapp/files.gni
@@ -110,6 +110,7 @@ remoting_webapp_unittests_js_files = [
   "crd/js/combined_host_list_api_unittest.js",
   "crd/js/gcd_client_unittest.js",
   "crd/js/gcd_client_with_mock_xhr_unittest.js",
+  "crd/js/gnubby_auth_handler_unittest.js",
   "crd/js/host_controller_unittest.js",
   "crd/js/host_daemon_facade_unittest.js",
   "crd/js/host_table_entry_unittest.js",
