Implement Catalog interface in package manager
Review URL: https://codereview.chromium.org/1716733002

Cr-Commit-Position: refs/heads/master@{#376658}

--- a/mash/task_viewer/BUILD.gn
+++ b/mash/task_viewer/BUILD.gn
@@ -11,14 +11,15 @@ import("//tools/grit/repack.gni")
 mojo_native_application("task_viewer") {
   sources = [
     "main.cc",
-    "task_viewer_application_delegate.cc",
-    "task_viewer_application_delegate.h",
+    "task_viewer.cc",
+    "task_viewer.h",
   ]
 
   deps = [
     ":manifest",
     "//base",
     "//mojo/public/cpp/bindings",
+    "//mojo/services/package_manager/public/interfaces",
     "//mojo/services/tracing/public/cpp",
     "//mojo/shell/public/cpp",
     "//mojo/shell/public/cpp:sources",
