--- a/mojo/services/package_manager/public/interfaces/BUILD.gn
+++ b/mojo/services/package_manager/public/interfaces/BUILD.gn
@@ -6,6 +6,7 @@ import("//mojo/public/tools/bindings/mojom.gni")
 
 mojom("interfaces") {
   sources = [
+    "catalog.mojom",
     "resolver.mojom",
     "shell_resolver.mojom",
   ]
