--- a/mojo/shell/background/BUILD.gn
+++ b/mojo/shell/background/BUILD.gn
@@ -20,6 +20,7 @@ source_set("lib") {
     "//mojo/message_pump",
     "//mojo/shell",
     "//mojo/shell/public/cpp:sources",
+    "//mojo/shell/runner:init",
     "//mojo/shell/standalone:lib",
   ]
 }
@@ -34,6 +35,7 @@ source_set("main") {
     "//mojo/message_pump",
     "//mojo/shell",
     "//mojo/shell/public/cpp:sources",
+    "//mojo/shell/runner:init",
     "//mojo/shell/runner/common",
     "//mojo/shell/runner/host:lib",
     "//mojo/shell/standalone:lib",
