Move remoting/remoting_host_win.gypi:remoting_breakpad_tester to gn
BUG=512899

Review URL: https://codereview.chromium.org/1710933004

Cr-Commit-Position: refs/heads/master@{#376662}

--- a/remoting/BUILD.gn
+++ b/remoting/BUILD.gn
@@ -75,6 +75,20 @@ group("remoting_all") {
   }
 }
 
+if (is_win) {
+  # GYP version: remoting/remoting_host_win.gypi:remoting_breakpad_tester
+  executable("remoting_breakpad_tester") {
+    deps = [
+      "//base",
+      "//remoting/host",
+    ]
+
+    sources = [
+      "tools/breakpad_tester_win.cc",
+    ]
+  }
+}
+
 # GYP version: remoting/remoting_test.gypi:remoting_test_support
 source_set("test_support") {
   testonly = true
