--- a/components/cronet/android/BUILD.gn
+++ b/components/cronet/android/BUILD.gn
@@ -240,6 +240,8 @@ shared_library("cronet") {
     "//base",
     "//net:net_small",
   ]
+  ldflags = [ "-Wl,--version-script=" +
+              rebase_path("//components/cronet/android/only_jni_exports.lst") ]
 }
 
 # cronet_api.jar defines Cronet API and provides implementation of
@@ -421,6 +423,9 @@ shared_library("cronet_tests") {
   ]
 
   include_dirs = [ _cronet_version_header_include_dir ]
+
+  ldflags = [ "-Wl,--version-script=" +
+              rebase_path("//components/cronet/android/only_jni_exports.lst") ]
 
   if (cronet_enable_data_reduction_proxy_support) {
     deps += [ "//components/data_reduction_proxy/core/browser" ]
