Add cursor support to Ozone X11.
This CL adds a CursorFactoryOzone implementation for Ozone X11. A
X11CursorOzone class is added along with X11WindowOzone. This class
exists to own the X11 cursor id and own associated resources. It
cleans up X resources on destruction.

BUG=361137

Review URL: https://codereview.chromium.org/1664373002

Cr-Commit-Position: refs/heads/master@{#376735}

--- a/ui/ozone/platform/x11/BUILD.gn
+++ b/ui/ozone/platform/x11/BUILD.gn
@@ -8,6 +8,8 @@ source_set("x11") {
     "client_native_pixmap_factory_x11.h",
     "ozone_platform_x11.cc",
     "ozone_platform_x11.h",
+    "x11_cursor_factory_ozone.cc",
+    "x11_cursor_factory_ozone.h",
     "x11_surface_factory.cc",
     "x11_surface_factory.h",
   ]
