--- a/ui/base/BUILD.gn
+++ b/ui/base/BUILD.gn
@@ -6,6 +6,7 @@ import("//build/config/compiler/compiler.gni")
 import("//build/config/sanitizers/sanitizers.gni")
 import("//build/config/ui.gni")
 import("//testing/test.gni")
+import("//ui/ozone/ozone.gni")
 
 if (is_android) {
   import("//build/config/android/config.gni")
@@ -397,7 +398,7 @@ component("base") {
       "dragdrop/drag_utils_aura.cc",
     ]
   }
-  if (use_x11) {
+  if (use_x11 || ozone_platform_x11) {
     sources += [
       "x/x11_foreign_window_manager.cc",
       "x/x11_foreign_window_manager.h",
@@ -505,7 +506,7 @@ component("base") {
     ]
   }
 
-  if (use_x11) {
+  if (use_x11 || ozone_platform_x11) {
     #'all_dependent_settings': {
     #'ldflags': [
     #'-L<(PRODUCT_DIR)',
