--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,7 @@ vs-chromium-project.txt
 /infra/.recipe_deps
 /internal_gyp
 /ios/build/util/CANARY_VERSION
+/ios/third_party/fishhook/src
 /ios/third_party/gcdwebserver/src
 /llvm
 /media/cast/logging/cast_logging_proto_lib.xml
