--- a/mojo/public/cpp/bindings/BUILD.gn
+++ b/mojo/public/cpp/bindings/BUILD.gn
@@ -66,6 +66,8 @@ source_set("bindings") {
     "lib/scoped_interface_endpoint_handle.h",
     "lib/string_serialization.cc",
     "lib/string_serialization.h",
+    "lib/sync_handle_watcher.cc",
+    "lib/sync_handle_watcher.h",
     "lib/union_accessor.h",
     "lib/validate_params.h",
     "lib/validation_errors.cc",
