ozone: Use allow_circular_includes_from to fix deps issue
It turns out what we're doing is supported all along with the special
allow_circular_includes_from feature. This says that the stuff in
platform/ is intended solely to be aggregated into //ui/ozone and it's
therefore OK to include headers from there. So switch to this instead of
annotating with "nogncheck."

Also add a bunch of missing dependencies that gn check is complaining
about, and fix public_deps of //ui/ozone to correctly include all of the
stuff needed by the public headers.

Review URL: https://codereview.chromium.org/1716543003

Cr-Commit-Position: refs/heads/master@{#376794}

--- a/ui/ozone/platform/caca/BUILD.gn
+++ b/ui/ozone/platform/caca/BUILD.gn
@@ -29,6 +29,7 @@ source_set("caca") {
     "//ui/gfx",
     "//ui/gfx/geometry",
     "//ui/ozone:ozone_base",
+    "//ui/platform_window",
   ]
 
   configs += [ ":libcaca" ]
