--- a/ui/ozone/platform/headless/BUILD.gn
+++ b/ui/ozone/platform/headless/BUILD.gn
@@ -25,5 +25,6 @@ source_set("headless") {
     "//ui/events/platform",
     "//ui/gfx/geometry",
     "//ui/ozone:ozone_base",
+    "//ui/platform_window",
   ]
 }
