--- a/ui/ozone/BUILD.gn
+++ b/ui/ozone/BUILD.gn
@@ -143,28 +143,28 @@ component("ozone") {
 
   public_deps = [
     ":ozone_base",
+    "//base",
+    "//ipc",
+    "//skia",
+    "//ui/display/types",
+    "//ui/events",
+    "//ui/events/devices",
+    "//ui/gfx",
+    "//ui/gfx/geometry",
+    "//ui/platform_window",
   ]
 
-  deps =
-      [
-        ":generate_constructor_list",
-        ":generate_ozone_platform_list",
-        "//base",
-        "//ipc",
-        "//skia",
-        "//ui/display/types",
-        "//ui/display/util",
-        "//ui/events",
-        "//ui/events/devices",
-        "//ui/events/ozone:events_ozone",
-        "//ui/gfx",
-        "//ui/gfx/geometry",
-        "//ui/gfx/ipc",
-        "//ui/platform_window",
+  deps = [
+    ":generate_constructor_list",
+    ":generate_ozone_platform_list",
+  ]
 
-        # TODO(GYP) the GYP version has a way to add additional dependencies via
-        # build flags.
-      ] + ozone_platform_deps
+  # TODO(GYP) the GYP version has a way to add additional dependencies via
+  # build flags.
+  public_deps += ozone_platform_deps
+
+  # Platforms are always linked into //ui/ozone and can include our headers.
+  allow_circular_includes_from = ozone_platform_deps
 }
 
 # GYP version: ui/ozone/ozone.gyp:generate_ozone_platform_list
