--- a/ui/ozone/platform/egltest/BUILD.gn
+++ b/ui/ozone/platform/egltest/BUILD.gn
@@ -26,6 +26,7 @@ source_set("egltest") {
     "//ui/events/platform",
     "//ui/gfx",
     "//ui/ozone:ozone_base",
+    "//ui/platform_window",
   ]
 }
 
