--- a/ui/ozone/platform/wayland/BUILD.gn
+++ b/ui/ozone/platform/wayland/BUILD.gn
@@ -24,7 +24,10 @@ source_set("wayland") {
     "//third_party/wayland:wayland_client",
     "//third_party/wayland-protocols:xdg_shell_protocol",
     "//ui/events/platform",
+    "//ui/gfx",
+    "//ui/gfx/geometry",
     "//ui/ozone:ozone_base",
+    "//ui/platform_window",
   ]
 
   defines = [ "OZONE_IMPLEMENTATION" ]
