--- a/infra/config/cq.cfg
+++ b/infra/config/cq.cfg
@@ -68,7 +68,15 @@ verifiers {
     buckets {
       name: "tryserver.chromium.mac"
       builders { name: "ios_dbg_simulator_ninja" }
+      builders {
+        name: "ios_dbg_simulator_gn"
+        experiment_percentage: 10
+      }
       builders { name: "ios_rel_device_ninja" }
+      builders {
+        name: "ios_rel_device_gn"
+        experiment_percentage: 10
+      }
       builders { name: "mac_chromium_compile_dbg_ng" }
       builders { name: "mac_chromium_gn_rel" }
       builders { name: "mac_chromium_rel_ng" }
