ozone: Fix the way platform tests link ozone
Right now the DRM platform unit tests link ozone as a component, and also
link against the platform classes statically. Linking two copies of the
platform code into the test executable is an ODR violation and undefined
behavior.

The newer wayland platform fixes the issue, but at the cost of exporting
platform internals from ozone. It'd be good to avoid these exports
because it forces us to mark the platform dependency public in GN, which
in turn makes inclusion of platform internals legal from outside ozone
according to GN's dependency checker.

To fix both issues, this creates an new internal //ui/ozone:platform
target which is used by tests to link ozone statically. Only tests will
use it, everyone else will continue to use ozone encapsulated via the
//ui/ozone component.

GYP can do this as well but has a weird quirk: it won't link if there's
no C++ source file in the component target. I added an empty one.

Review URL: https://codereview.chromium.org/1717573002

Cr-Commit-Position: refs/heads/master@{#376823}

--- a/ui/ozone/BUILD.gn
+++ b/ui/ozone/BUILD.gn
@@ -122,7 +122,7 @@ component("ozone_base") {
   ]
 }
 
-component("ozone") {
+source_set("platform") {
   sources = [
     "common/stub_client_native_pixmap_factory.cc",
     "common/stub_client_native_pixmap_factory.h",
@@ -161,10 +161,16 @@ component("ozone") {
 
   # TODO(GYP) the GYP version has a way to add additional dependencies via
   # build flags.
-  public_deps += ozone_platform_deps
+  deps += ozone_platform_deps
 
   # Platforms are always linked into //ui/ozone and can include our headers.
   allow_circular_includes_from = ozone_platform_deps
+}
+
+component("ozone") {
+  public_deps = [
+    ":platform",
+  ]
 }
 
 # GYP version: ui/ozone/ozone.gyp:generate_ozone_platform_list
@@ -217,8 +223,15 @@ test("ozone_unittests") {
   ]
 
   deps = [
-           "//base/test:test_support",
-           "//testing/gtest",
-           "//ui/gfx/geometry",
-         ] + ozone_platform_test_deps
+    "//base/test:test_support",
+    "//testing/gtest",
+    "//ui/gfx/geometry",
+  ]
+
+  # Add tests of platform internals.
+  deps += ozone_platform_test_deps
+
+  # Platform tests link ozone statically. Make sure we're not getting a
+  # 2nd copy of any code via the component.
+  assert_no_deps = [ "//ui/ozone" ]
 }
