--- a/ui/ozone/platform/drm/BUILD.gn
+++ b/ui/ozone/platform/drm/BUILD.gn
@@ -189,7 +189,7 @@ source_set("gbm_unittests") {
     "//skia",
     "//testing/gtest",
     "//ui/gfx",
-    "//ui/ozone",
+    "//ui/ozone:platform",
   ]
 
   public_configs = [ ":libdrm" ]
