--- a/components/safe_browsing_db/BUILD.gn
+++ b/components/safe_browsing_db/BUILD.gn
@@ -49,7 +49,6 @@ source_set("database_manager") {
   ]
   deps = [
     ":hit_report",
-    ":proto",
     ":util",
     ":v4_get_hash_protocol_manager",
     "//base:base",
@@ -87,8 +86,10 @@ source_set("v4_get_hash_protocol_manager") {
     "v4_get_hash_protocol_manager.cc",
     "v4_get_hash_protocol_manager.h",
   ]
-  deps = [
+  public_deps = [
     ":proto",
+  ]
+  deps = [
     ":util",
     "//base",
     "//net",
@@ -103,7 +104,6 @@ source_set("remote_database_manager") {
   ]
   deps = [
     ":database_manager",
-    ":proto",
     ":safe_browsing_api_handler",
     ":v4_get_hash_protocol_manager",
     "//base:base",
