Blimp: Add support for multiple render widget compositors on the client.
The BlimpEngineSession currently listens to OnRenderWidgetInitialized
events from WebContents to tie the compositor and input feature channels
to the current compositor. Any compositor messages for a pending render
widget are dropped on the engine.

This means that in case of a cross-site navigation, the compositor
messages sent from the render widget for the navigation are dropped
before it in initialized. Since the compositor protocol expects in-order
reliable delivery of messages, it causes these navigations to fail.

The BlimpEngineSession will now listen to RenderViewCreated and
RenderViewDeleted events from WebContents to create and destroy a
corresponding BlimpCompositor instance on the client. The lifetime of the
BlimpCompositor is tied to the lifetime of the RenderWidget. When a
RenderWidget is initialized, the client is informed to bind the compositor
instance for this widget to the native view.

Review URL: https://codereview.chromium.org/1705163002

Cr-Commit-Position: refs/heads/master@{#376864}

--- a/blimp/engine/BUILD.gn
+++ b/blimp/engine/BUILD.gn
@@ -197,6 +197,7 @@ source_set("feature_unit_tests") {
     "//base/test:run_all_unittests",
     "//base/test:test_support",
     "//blimp/common/proto",
+    "//content",
     "//testing/gmock",
     "//testing/gtest",
   ]
