Android: Record metrics for buttons in the Origin Info Bubble
WebsiteSettings records metrics for a variety of user actions, however,
most of these were not being recorded correctly on Android. This adds
the histogram metrics to buttons in the Android WebsiteSettingsPopup
using the existing native recording method.

BUG=587635

Review URL: https://codereview.chromium.org/1714383002

Cr-Commit-Position: refs/heads/master@{#376883}

--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -973,6 +973,13 @@ if (is_android) {
     ]
   }
 
+  # GYP: //chrome/chrome.gyp:website_settings_action_java
+  java_cpp_enum("website_settings_action_javagen") {
+    sources = [
+      "browser/ui/website_settings/website_settings.h",
+    ]
+  }
+
   # Some android targets still depend on --gc-sections to link.
   # TODO: remove --gc-sections for Debug builds (crbug.com/159847).
   config("gc_sections") {
