--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -180,6 +180,7 @@ android_library("chrome_java") {
     srcjar_deps += [
       ":custom_tabs_service_aidl",
       "//chrome:page_info_connection_type_javagen",
+      "//chrome:website_settings_action_javagen",
       "//components/infobars/core:infobar_enums_java",
       "//components/offline_pages:offline_page_feature_enums_java",
       "//components/offline_pages:offline_page_model_enums_java",
