PNaCl: Enable the Subzero translator for x86-64.
On the x86-64 architecture, use pnacl-sz instead of pnacl-llc when the PNaCl manifest file explicitly specifies O0 translation.

BUG=588337
TEST= git cl try -b linux_chromium_dbg_32_ng

Review URL: https://codereview.chromium.org/1716783003

Cr-Commit-Position: refs/heads/master@{#376885}

--- a/ppapi/native_client/src/untrusted/pnacl_support_extension/BUILD.gn
+++ b/ppapi/native_client/src/untrusted/pnacl_support_extension/BUILD.gn
@@ -47,6 +47,7 @@ if (enable_nacl) {
       "libgcc_a",
       "libpnacl_irt_shim_a",
       "pnacl_llc_nexe",
+      "pnacl_sz_nexe",
     ]
 
     if (target_cpu == "arm") {
