--- a/ui/ozone/platform/headless/BUILD.gn
+++ b/ui/ozone/platform/headless/BUILD.gn
@@ -25,6 +25,7 @@ source_set("headless") {
     "//ui/events/platform",
     "//ui/gfx/geometry",
     "//ui/ozone:ozone_base",
+    "//ui/ozone/common",
     "//ui/platform_window",
   ]
 }
