ArcPowerBridge: add IsDisplayOn
Apps running in ARC will sometimes act differently depending
on whether or not the screen is on/the device is in "interactive"
mode. We should plumb this through to allow ARC apps to query
the screen state.

BUG=b:27193237
TEST=use PowerManager interface and make sure it matches up to
  the display state

Review URL: https://codereview.chromium.org/1717013002

Cr-Commit-Position: refs/heads/master@{#376904}

--- a/components/arc/BUILD.gn
+++ b/components/arc/BUILD.gn
@@ -34,6 +34,7 @@ static_library("arc") {
   ]
 
   deps = [
+    "//ash:ash",
     "//base",
     "//chromeos",
     "//chromeos:power_manager_proto",
@@ -48,6 +49,7 @@ static_library("arc") {
     "//ui/aura",
     "//ui/base:base",
     "//ui/base/ime",
+    "//ui/display:display",
     "//ui/events",
     "//ui/events:dom_keycode_converter",
   ]
