ARC IME: Don't rely on window names for filtering ARC windows.
As suggested in the comments in https://codereview.chromium.org/1661183003/.

BUG=b/26946447

Review URL: https://codereview.chromium.org/1708433003

Cr-Commit-Position: refs/heads/master@{#376926}

--- a/components/arc/BUILD.gn
+++ b/components/arc/BUILD.gn
@@ -38,6 +38,7 @@ static_library("arc") {
     "//base",
     "//chromeos",
     "//chromeos:power_manager_proto",
+    "//components/exo",
     "//components/onc",
     "//components/prefs",
     "//components/signin/core/account_id",
